# qfile

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
Files/: read.txt  write.txt
Files/Access/: root.txt
src/: QError.rs  context_command.rs  core.rs  find.rs  get_path.rs  init.rs  lib.rs  mem.rs  paths.rs  prelude_async.rs  prelude_sync.rs  qerror.rs  read.rs  speed_time.rs  systems.rs  utils.rs  write.rs
src/core/: custom_error.rs  custom_errors.rs  default.rs  drop.rs  getters.rs  mod.rs  read.rs  traits.rs  write.rs
src/core/async/: async_find.rs  async_qfile.rs  async_read.rs  async_trait.rs  async_write.rs  mod.rs
src/core/async/get_path/: mod.rs
src/core/read/: mod.rs
src/core/sync/: mod.rs  sync_find.rs  sync_qfile.rs  sync_read.rs  sync_trait.rs  sync_write.rs
src/core/sync/get_path/: mod.rs
src/core/unit_tests/: core.rs  mod.rs  read.rs
src/core/write/: files.rs  mod.rs
src/dpds_path/: mod.rs
src/sync/: mod.rs  sync_find.rs  sync_read.rs  sync_write.rs
src/unit_tests/: mod.rs  tests_mem.rs
tests/: Paths  building.rs  qfile-1_0.rs  qfile-2_0.rs  qfile-3-0.rs  qfile-sync.rs
